--- a/src/MultiAlign/Windows/Viewers/AnalysisView.xaml
+++ b/src/MultiAlign/Windows/Viewers/AnalysisView.xaml
@@ -63,19 +63,7 @@
                             
                             Style="{DynamicResource ResourceKey=SimpleTabItem}"
                             Header="All Clusters">
-                            <!-- Cluster Grid Plots -->
-                            <WindowsFormsHost                
-                                Margin="5,5,5,5"
-                                Grid.Row="2"
-                                Grid.Column="0">
-                                <maCharts:ctlClusterChart
-                                        Title=""
-                                        LegendVisible="false"
-                                        YAxisShortHand="ppm"
-                                        XAxisShortHand="NET"                            
-                                        x:Name="m_clusterPlot"
-                                        />
-                            </WindowsFormsHost>
+                            <ContentControl Margin="5" Content="{Binding ClusterChart}"/>                                                        
                         </TabItem>
                         <TabItem                             
                             Style="{DynamicResource ResourceKey=SimpleTabItem}"
