--- a/src/MultiAlign/Windows/Wizard/AnalysisOptionsView.xaml
+++ b/src/MultiAlign/Windows/Wizard/AnalysisOptionsView.xaml
@@ -1,43 +1,29 @@
-﻿<UserControl x:Class="MultiAlign.Windows.Wizard.AnalysisOptionsView"
+﻿<Window x:Class="MultiAlign.Windows.Wizard.AnalysisOptionsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
+            
+         Icon="/MultiAlign;component/Resources/logo.png" 
+             Title="Advanced Options"
+            
              xmlns:macontrols="clr-namespace:MultiAlignParameterFileEditor;assembly=MultiAlignParameterFileEditor"
              d:DesignHeight="437" d:DesignWidth="562">
-    <Grid
-        Background="White"
-        Margin="5"
-        >
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <Button        
-            Style="{DynamicResource ResourceKey=SimpleButtonStyle}"      
-            Grid.Row="0"
-            Grid.Column="0"
-            Margin="5"
-            Width="128"
-            Height="64"
-            x:Name="OpenExistingParameterFileButton"
-            Click="OpenExistingParameterFileButton_Click">
-            Load Existing
-        </Button>
-        <WindowsFormsHost
-            Grid.Row="0"
-            Grid.RowSpan="2"
-            Grid.Column="1"
+    <DockPanel        
+        Margin="5">
+        <Button 
+            DockPanel.Dock="Bottom"
+            IsCancel="True"
+            Width="64"
+            Height="32"
+            Style="{DynamicResource ResourceKey=SimpleBrowseButtonStyle}" 
+            HorizontalAlignment="Right"
             >
-            <macontrols:ParameterFileEditor
-                x:Name="m_editor"
-                >                
-            </macontrols:ParameterFileEditor>
-        </WindowsFormsHost>
-    </Grid>
-</UserControl>
+            Ok
+        </Button>
+        <ContentControl    
+            Margin="5"
+            Content="{Binding Editor}"/>
+    </DockPanel>
+</Window>
